# shoppinglist-server

./: .gitignore  CMakeLists.txt  main.cpp  server.cpp  user_ctl.cpp
config/: defaults.h  defaults.h.in
data/: default.conf  users
src/: CMakeLists.txt  List.cpp  List.h  ListServer.cpp  ListServer.h  RequestHandler.cpp  RequestHandler.h  authentication_check.cpp  authentication_check.h  exceptions.h  json_decorator.cpp  json_decorator.h  list.cpp  list.h  list_server.cpp  list_server.h  request_handler.cpp  request_handler.h  strong_types.h  user_ctl.cpp  user_ctl.h
src/api/: authentication_check.cpp  authentication_check.h  pbkdf_2.cpp  pbkdf_2.h  request_handler.cpp  request_handler.h
src/config/: config_reader.cpp  config_reader.h  exception.h  server_config.cpp  server_config.h
src/model/: entry.cpp  entry.h  exception.h  list.cpp  list.h  user.h
src/serde/: json_decorator.cpp  json_decorator.h
test/: CMakeLists.txt  test_config.h.in
test/fixtures/: simpleConfig.conf
test/mocks/: authentication_mocks.h
test/unit/: authentication_check_test.cpp  json_decorator_test.cpp  list_server_test.cpp  list_test.cpp  request_handler_test.cpp  strong_types_test.cpp  user_ctl_test.cpp
test/unit/api/: authentication_check_test.cpp  pbkdf_2_test.cpp  request_handler_test.cpp
test/unit/config/: config_reader_test.cpp  server_config_test.cpp
test/unit/model/: list_test.cpp
test/unit/serde/: json_decorator_test.cpp
